--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Segundo_DAM/Desarrollo_de_interfaces/App Cine"]
 	path = Segundo_DAM/Desarrollo_de_interfaces/App Cine
-	url = https://github.com/nbch0203/App-de-cine.git
+	url = https://github.com/nbch0203/App-Cine.git
